modification texte html

--- a/templates/form.html
+++ b/templates/form.html
@@ -89,7 +89,7 @@
     </style>
 </head>
 <body>
-    <h2>Posez vos questions sur la statuette Aboya et/ou sur la culture Baoulé</h2>
+    <h2>Qu'aimeriez vous savoir sur la statuette ABOYA ou sur la culture Baoulé ?</h2>
     <form method="POST">
         <label for="question">Votre question :</label>
         <textarea name="question" rows="5" required></textarea>
