--- a/templates/reponse.html
+++ b/templates/reponse.html
@@ -21,23 +21,23 @@
     flex-direction: column;
     background-color: #f8f5f0;
     border: 1px solid #4b2e15;
-    margin-top: 1em;
-    width: 52%;
-    height: 92vh;
+    margin-top: 3em;
+    max-width: 90%;
+    height: 88vh;
   }
 
   /* RESPONSIVE */
   @media (max-width: 1024px) {
     #container {
-      width: 80%;
-      height: 95vh;
+      width: 85%;
+      height: 85vh;
     }
   }
 
   @media (max-width: 768px) {
     #container {
-      width: 95%;
-      height: 100vh;
+      width: 85%;
+      height: 85vh;
     }
 
     form {
@@ -108,6 +108,7 @@
     box-shadow: 0 0 6px rgba(247,127,0,0.5);
     font-weight: bold;
     border-radius: 10px;
+    max-width: 97%;
     padding: 1rem;
     align-self: flex-start;
     margin-top: 0.5rem;
@@ -138,6 +139,7 @@
     resize: none;
     padding: 0.8rem;
     border: 1px solid #4b2e15;
+    max-width: 96%;
     border-radius: 8px;
     color: #4b2e15;
     font-size: 1rem;
